Separating the keepalived charts

--- a/kube-keepalived-vip-cloud-provider/values.yaml
+++ b/kube-keepalived-vip-cloud-provider/values.yaml
@@ -2,4 +2,6 @@
 #  Services:
 #   - Vip: 192.168.99.200
 #     ServiceNamespace: kube-system
-#     ServiceName: registry   
+#     ServiceName: registry
+#LoadBalancers:
+#  CIDR: 192.168.77.128/25     
