--- a/kube-keepalived-vip/Chart.yaml
+++ b/kube-keepalived-vip/Chart.yaml
@@ -1,7 +1,6 @@
 apiVersion: v1
-description: A Helm chart for Kubernetes
+description: Helm chart to install keepalive-vip on the cluster.
 name: kube-keepalived-vip
 version: 0.1.0
 sources:
 - https://github.com/aledbf/kube-keepalived-vip
-- https://github.com/munnerz/keepalived-cloud-provider
